grok parser uni-template add

--- a/10-syslog.conf
+++ b/10-syslog.conf
@@ -1,13 +1,23 @@
-filter {
-  if [type] == "syslog" {
-    grok {
-      match => { "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:syslog_message}" }
-      add_field => [ "received_at", "%{@timestamp}" ]
-      add_field => [ "received_from", "%{host}" ]
-    }
-    syslog_pri { }
-    date {
-      match => [ "syslog_timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
-    }
+input {
+  tcp {
+    port => 5514
+    type => syslog
   }
+  udp {
+    port => 5514
+    type => syslog
+  }
+}
+filter {
+   if [type] == "syslog" and [message] =~ "HTTP" {
+     grok {
+        "match" => { "message" => "%{SYSLOG5424PRI:syslog_pri}%{TIMESTAMP_ISO8601:logdate} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{COMBINEDAPACHELOG:syslog_message}"}
+       }
+    } else if [type] == "syslog" {
+     grok {
+        "match" => { "message" => "%{SYSLOG5424PRI:syslog_pri}%{TIMESTAMP_ISO8601:logdate} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:syslog_message}"}
+      }
+    }
+
+
 }
